css/style.css
:root {
  --white: #efeeed;
  --tertiary: #a7a0cb;
  --primary: #6473ae;
  --secondary: #563d75;
  --black: #262547;
}

body {
  background: var(--black);
  color: var(--black);
}

a {
  color: var(--primary);
}

a:visited {
  color: var(--primary);
}

a:hover {
  color: var(--tertiary);
}

h2 {
  color: var(--secondary);
}

h3 {
  color: var(--tertiary);
}

hr {
  color: var(--black);
}

.button {
  border: 0.2em solid var(--secondary);
  border-radius: 0.7em;
  padding: 0.5em;
  background-color: var(--primary);
  color: var(--white);
  text-decoration: none;
}

.button:hover {
  color: var(--white);
  background-color: var(--tertiary);
}

.button:visited {
  color: var(--white);
}

.main {
  width: 65%;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  margin: auto;
  gap: 1em;
  padding: 0.5em 2.5em 0.5em 2.5em;
  background-color: var(--white);
  border-radius: 0.7em;
}

hr {
  width: 100%;
}

.head {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.intro {
  padding: 0.5em;
  margin: auto;
  width: 50%;
}

@media screen and (max-width: 600px) {
  .intro {
    width: 100%;
  }
}

.invis-check {
  display: none;
}

#A:checked ~ #sb,
#A:checked ~ #sc {
  display: none;
}

#B:checked ~ #sa,
#B:checked ~ #sc {
  display: none;
}

#C:checked ~ #sa,
#C:checked ~ #sb {
  display: none;
}

#A:checked ~ .disappear,
#B:checked ~ .disappear,
#C:checked ~ .disappear {
  display: none;
}

.appear {
  display: none;
}

#A:checked ~ .appear,
#B:checked ~ .appear,
#C:checked ~ .appear {
  display: block;
}

.quick-links {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 1em;
}

.abc {
  list-style-type: none;
  padding-left: 0;
}

.abc > label > li {
  margin-left: 2vw;
  margin-bottom: 1px;
  padding-left: 0.5em;
  border-left-width: 0.5em;
  border-left-style: solid;
  border-left-color: var(--primary);
}

.abc > label:hover {
  color: var(--tertiary);
  text-decoration: underline;
}

.abc > label:hover > li {
  cursor: pointer;
  border-left-color: var(--tertiary);
}

.cursor-flash {
  opacity: 0;
  animation: fadeInOut 0.5s;
  animation-iteration-count: infinite;
}

.contact-panel {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 2em;
}

.contact-panel a {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
}

.contact-panel a img {
  margin-right: 0.5em;
}

.gh-ico {
  height: 1.5em;
}

.tech {
  margin-left: 1em;
  margin-right: 1em;
  width: 100%;
}

.tech-info {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
}

@media screen and (max-width: 600px) {
  .tech-info {
    justify-content: flex-start;
  }
}

.tech-card {
  min-width: 20%;
}

.tech-card-head {
  font-style: italic;
  text-decoration: underline;
}

.port {
  margin-left: 1em;
  margin-right: 1em;
  width: 100%;
}

.port-table {
  display: flex;
  flex-direction: column;
}

.port-card {
  display: flex;
  flex-direction: row;
}

.port-desc-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 2em;
  padding-right: 2em;
  width: 50%;
}

.port-title {
  font-size: larger;
  font-weight: bold;
}

.port-tech > ul {
  display: flex;
  flex-flow: row wrap;
  gap: 1em;
  list-style: none;
  padding-left: 1em;
}

.port-tech > ul > li {
  border: 0.1em solid var(--primary);
  border-radius: 0.7em;
  padding: 0.3em;
  background-color: var(--tertiary);
}

.port-img {
  width: 50%;
  height: 100%;
}

.port-img-container {
  display: flex;
  height: 25em;
  justify-content: center;
  align-items: center;
  overflow: clip;
  border-radius: 0.7em;
}

.port-img-container > img {
  border-radius: 0.7em;
  width: 100%;
}

@media (width > 600px) {
  .port-mb {
    display: none;
  }
}

@media screen and (max-width: 600px) {
  .port-img {
    display: none;
  }

  .port-mb > img {
    width: 100%;
  }

  .port-card {
    flex-wrap: wrap;
    align-items: flex-start;
    border-bottom: 0.2em solid var(--primary);
    margin-bottom: 0.8em;
  }

  .port-desc-container {
    width: 100%;
    padding: 0;
  }
}

.spacer {
  height: 5em;
}

.foot {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: smaller;
}

.invis-tiny {
  display: inline-block;
  width: 2px;
  height: 1em;
}

